snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.1-SNAPSHOT/error-0.1.1-20210823.130037-1.module.sha512
aad03a2714c56c028b4335087fb5f6ece15f33adf4f2749714f440f451aa35e90a16b32ca2465fed09c56c1cad5e7d674503b4f41541435be99dbb5715f1c121